hphp/hack/test/typecheck/execution_operator.php.exp
File "execution_operator.php", line 4, characters 3-11:
The execution operator is not allowed in Hack files (Parsing[1002])
