hphp/hack/test/typecheck/execution_operator.php
<?hh // strict

function f(): void {
  `echo hi`;
}
